src/assets/scss/organisms/_act.scss
.act {
  padding-top: map-get($header-height, 'default');
}

.act__message {
  display: block;
  min-height: 130px;
  height: 130px;
  overflow-y: auto;
  padding: 10px 15px;
  margin-top: 10px;
  font-family: $font-slab;
  // NOTE: font-size is not fluid
  font-size: $font-size--slab-s;
  line-height: $line-height--slab-s;
  background-color: $clr-grey-lighter;
  color: $clr-red-dark;
  hyphens: auto;
  cursor: pointer;
  box-shadow: 0 2px 4px 0 rgba($clr-black, 0.25);
  transition: background-color $trans-duration $trans-cubic,
    color $trans-duration $trans-cubic;
  &.selected,
  &.selected:hover {
    color: $clr-white;
  }
  &:hover {
    color: shade($clr-red-dark, 15);
    background-color: shade($clr-grey-lighter, 5);
  }
}
@each $clr in $clr-cards {
  $clr-name: nth($clr, 1);
  $clr-value: nth($clr, 2);
  .act__message.selected[data-color='#{$clr-name}'],
  .act__message.selected[data-color='#{$clr-name}']:hover {
    background-color: #{$clr-value};
  }
}

.act__input {
  width: 100%;
  margin-bottom: 10px;
}

.act__button {
  margin-bottom: $vertical-space;
}

// Confirmation

.act__my-message {
  margin-top: $vertical-space;
  margin-bottom: $vertical-space;
}

// Responsive

@include mq($from: 'rat', $until: 'rabbit') {
  .act {
    padding-top: map-get($header-height, 'rat');
  }
}

@include mq($from: 'rabbit') {
  .act {
    padding-top: map-get($header-height, 'rabbit');
  }
}

@include mq($until: 'rat') {
  .act__message {
    &:first-child {
      margin-top: 0;
    }
  }
}

@include mq($from: 'rat') {
  .act__center-col {
    margin-left: auto;
    margin-right: auto;
  }

  .act .center-text {
    h1,
    h2,
    p {
      text-align: center;
    }
  }

  .act__select-message {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
  }

  .act__message {
    width: grid-width($cols: 4);
    margin-right: grid-width($gutters: 1);
    &:nth-child(3n + 0) {
      margin-right: 0;
    }
  }
}

@include mq($from: 'rat', $until: 'rabbit') {
  .act__center-col {
    width: grid-width($cols: 8);
  }
}

@include mq($from: 'rabbit') {
  .act__center-col {
    width: grid-width($cols: 4);
  }
}

